--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -14,7 +14,7 @@ on:
       LIBRARY_BRANCH:
         description: 'LIBRARY_BRANCH'
         required: true
-        default: 'twrp-7.1'
+        default: 'twrp-6.0'
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
@@ -32,7 +32,7 @@ on:
         required: true
         default: 'M5Note'
 env:
-  ssh: true66
+  ssh: true
 
 jobs:
   build:
