--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -10,15 +10,15 @@ on:
       LIBRARY_URL:
         description: 'LIBRARY_URL'
         required: true
-        default: 'git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git'
+        default: 'http://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git'
       LIBRARY_BRANCH:
         description: 'LIBRARY_BRANCH'
         required: true
-        default: 'twrp-6.0'
+        default: 'twrp-9.0'
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/zhlhlf/twrp_device_meizu_m1621'
+        default: 'https://github.com/aiden09/android_device_meizu_m1882'
       DEVICE_BRANCH:
         description: 'DEVICE_BRANCH'
         required: true
@@ -26,7 +26,7 @@ on:
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/meizu/M5Note'
+        default: 'device/meizu/m1882'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
