--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -30,7 +30,7 @@ on:
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'M5Note'
+        default: 'm1882'
 env:
   ssh: true
 
