--- a/.github/workflows/fox.yml
+++ b/.github/workflows/fox.yml
@@ -112,7 +112,7 @@ jobs:
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
       with:
-        files: workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery.img
+        files: workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/OrangeFox-Unofficial-${{ github.event.inputs.DEVICE_NAME }}.zip
         name: ${{ github.event.inputs.DEVICE_NAME }}-${{ github.run_id }}
         tag_name: ${{ github.run_id }}
         body: Recovery for ${{ github.event.inputs.DEVICE_NAME }}
